<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">True Med</string>
    <string name="notification">New Notification From Pill Reminder</string>
    <string name="notification_channel_description">This is a sample notification channel for demonstration purpose.
    </string>
    <!--accountkit config-->
    <string name="app_name_facebook">pill-reminder-app</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">635c5a65fce6feb9fd05ca6430eb3b18</string>
    <string name="facebook_app_id">231928891147955</string>
    <string name="fb_login_protocol_scheme">fb231928891147955</string>

    <!--finished-->

    <string name="facebook_page_url">https://www.facebook.com/aasthalife</string>
    <string name="facebook_page_url_for_app">fb:facewebmodal/f?href=https://www.facebook.com/aasthalife</string>
    <string name="youtube_channel_url">https://www.youtube.com/channel/UC7299QL8lsok3UTQgksMJ_g?view_as=subscriber</string>
    <string name="youtube_channel_id">UC7299QL8lsok3UTQgksMJ_g</string>

    <string name="log_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="dob_label">Date of Birth</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="gender_prompt">Gender :</string>
    <string name="submit">Submit</string>
    <!--<string name="login_now">Login Now</string>-->
    <string name="don_t_remember_password">Don\'t Remember password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="or">or</string>
    <string name="post_title">Title</string>
    <string name="post_content">Content</string>
    <string name="post_author">Author</string>
    <!--here all the hints-->
    <string name="register_hint_name">Name :</string>
    <string name="register_hint_email">Email :</string>
    <string name="register_hint_password">Password :</string>
    <string name="register_hint_dob">Date of Birth :</string>
    <string name="login_hint_user">Enter your email</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="profile_hint_address">Address :</string>
    <string name="profile_hint_bg">Blood Group :</string>
    <string name="profile_hint_gender">User ID or Phone Number :</string>

    <!--dropdown lists-->
    <string-array name="gender_list">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_dashboard2">DashboardActivity2</string>
    <string name="rating">Rating</string>
    <string name="reminder">Reminder</string>
    <string name="dashboard">Dashboard</string>
    <string name="morningTextWithLimit">Morning Time (06:00-11:59)</string>
    <string name="noonTextWithLimit">Noon Time (12:00-15:59)</string>
    <string name="eveningTextWithLimit">Evening Time (16:00-19:59)</string>
    <string name="nightTextWithLimit">Night Time (20:00-05:59)</string>

    <string-array name="array_sp_blood_group">
        <item>A+</item>
        <item>A-</item>
        <item>B-</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>

    <string-array name="array_sp_frequency">
        <item>Daily</item>
        <item>Periodically</item>
    </string-array>

    <string-array name="array_sp_report_days">
        <item>7 Days</item>
        <item>15 Days</item>
        <item>30 Days</item>
        <item>Custom Date</item>
    </string-array>

    <string-array name="array_sp_periodically">
        <item>Every 1 Days</item>
        <item>Every 2 Days</item>
        <item>Every 3 Days</item>
        <item>Every 4 Days</item>
        <item>Every 5 Days</item>
        <item>Every 6 Days</item>
        <item>Every 7 Days</item>
        <item>Every 8 Days</item>
        <item>Every 9 Days</item>
        <item>Every 10 Days</item>
        <item>Every 11 Days</item>
        <item>Every 12 Days</item>
        <item>Every 13 Days</item>
        <item>Every 14 Days</item>
        <item>Every 15 Days</item>
        <item>Every 16 Days</item>
        <item>Every 17 Days</item>
        <item>Every 18 Days</item>
        <item>Every 19 Days</item>
        <item>Every 20 Days</item>
        <item>Every 21 Days</item>
        <item>Every 22 Days</item>
        <item>Every 23 Days</item>
        <item>Every 24 Days</item>
        <item>Every 25 Days</item>
        <item>Every 26 Days</item>
        <item>Every 27 Days</item>
        <item>Every 28 Days</item>
        <item>Every 29 Days</item>
        <item>Every 30 Days</item>
    </string-array>

    <string-array name="number_of_days">
        <item>Continue</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="terms_of_service_title">terms_of_service_title</string>
    <string name="terms_of_service_body">terms_of_service_body</string>

    <string name="privacy_policy_title">privacy_policy_title</string>
    <string name="privacy_policy_body">privacy_policy_body</string>
    <string name="verify_code">Re enter Code</string>
    <string name="enter_code">Enter Code</string>
    <string name="passcode">Passcode</string>
    <string name="save">Save</string>
    <string name="disable">Disable</string>

</resources>
